# authmaster

./: .gitignore  AUTH_PHASE2_NEW_PHASE6.txt  AUTH_PHASE2_REMAINING_DESIGNS.md  AUTH_PHASE2_REMAINING_DESIGNS_v1.1.md  AuthMaster_PHASE2_ABAC_DESIGN.md  AuthMaster_PHASE2_DEFENSE_DESIGN.md  AuthMaster_PHASE2_SAML_DESIGN.md  DECISIONS.md  Dockerfile  IAM_MVP_ARCHITECTURE.md  IAM_MVP_PROJECT.md  IAM_PHASE2_MFA_DESIGN.md  IAM_PHASE2_REQUIREMENTS.md  PHASE2_REVIEW.md  PROJECT_STATUS.md  README.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_FINAL.md  docker-compose.yml  main_reports.py  main_sso.py  requirements.txt  setup.bat  setup.sh
app/: __init__.py
app/account/: __init__.py  events.py  identifier_normalizer.py  models.py  retry_scheduler.py  router.py  schemas.py  service.py
app/reports/: __init__.py  anomaly_detector.py  clickhouse_service.py  export_service.py  metrics.py  models.py  notification_service.py  router.py  schemas.py  service.py
app/saml/: __init__.py  router.py  service.py
app/sdk/: __init__.py  errors.py  middleware.py  models.py  router.py  schemas.py  service.py
app/sso/: __init__.py  models.py  router.py  schemas.py  service.py
migrations/: 000_phase1_init.sql  001_sso_phase2_9.sql  002_account_phase2_5.sql  003_ratelimit_phase2_7.sql  004_reports_phase2_8.sql  005_saml_phase2_4.sql
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/authmaster/: __init__.py  __version__.py  client.py  decorators.py  errors.py  exceptions.py  models.py  py.typed
sdk/python/tests/: conftest.py
tests/: conftest.py  test_ratelimit.py
(+26 files in other folders)
