[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "authmaster"
version = "1.0.0"
description = "Official Python SDK for AuthMaster authentication and authorization API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AuthMaster Team", email = "support@authmaster.example.com"},
]
keywords = ["authmaster", "authentication", "authorization", "IAM", "SDK"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]

[project.urls]
Homepage = "https://authmaster.example.com"
Documentation = "https://docs.authmaster.example.com"
Repository = "https://github.com/authmaster/python-sdk"
Changelog = "https://docs.authmaster.example.com/changelog"

[tool.setuptools]
packages = ["authmaster"]

[tool.setuptools.package-data]
authmaster = ["py.typed"]
